sc/source/filter/xml/xmlmappingi.cxx
@@ -117,7 +117,8 @@ ScXMLMappingContext::~ScXMLMappingContext()
     auto& rDataMapper = pDoc->GetExternalDataMapper();
     auto& rDataSources = rDataMapper.getDataSources();
     if(!rDataSources.empty())
-        rDataSources[0].refresh(pDoc, true);
+        rDataSources.back().refresh(pDoc, true);
+
 }
 
 uno::Reference<xml::sax::XFastContextHandler>
